<resources>
    <string name="app_name">Приключения \n Дино</string>
    <string name="start">Начать игру</string>
    <string name="сontinue">Продолжить</string>
    <string name="skip">Пропустить</string>
    <string name="back">Назад</string>
    <string name="exit">Выйти из игры</string>
    <string name="loading">Загрузка</string>

    <string name="on_sound">Пожалуйста, включите звук</string>

    <string name="level">Уровень:</string>
    <string name="level1">Уровень: 1 \n Выбрать большее число</string>
    <string name="level2">Уровень: 2 \n Выбрать большее кол-во углов</string>
    <string name="level3">Уровень: 3 \n Выбрать большее животное</string>
    <string name="level4">Уровень: 4 \n Выбрать планету дальше от солнца</string>
    <string name="level5">Уровень: 5 \n Выбрать позднюю роль</string>
    <string name="level6">Уровень: 6 \n Выбрать теплый цвет</string>
    <string name="level7">Уровень: 7 \n Выбрать съедобное растение</string>
    <string name="level8">Уровень: 8 \n Выбрать больший объем</string>

    <string name="btndialogcontinue">Далее</string>

    <string name="dialogtext1">Расставим главы в нужном порядке, для этого выберите то число, которое будет больше.</string>
    <string name="dialogtext2">Расположив все главы в правильном порядке, Вы узнаёте, что первым народом Эвергардэна являются древние Кутумы, советники короля.</string>
    <string name="dialogtext2_1">Кутумы готовы следовать только за сильным лидером и не верят Вам, они не согласны выйти на поверхность,
    Вы можете доказать им обратное, создайте своими руками лучшую огранку Рубина, для этого Вам нужно выбрать то количество углов,
        которое будет больше.</string>
    <string name="dialogtext2_2">Кутумы готовы принять мастерство, но с опаской доверяют доверяют Вам, они выйдут на поверхность,
    как только будут готовы, дальше они направляют Вас на восток, к островным жителям - Бернам.</string>
    <string name="dialogtext3_1">Помогите Бернам вспомнить, какие сущетсва живут на земле, для этого
        выберите то животное, размер которого будет больше.</string>
    <string name="dialogtext3_2">Вместе с Вами, Берны спускаются на потоках ветра к разрушенному замку Эвергардена,
    они просят разыскать Вас народ - Вамоль, чтобы они помогли скрасить скуку восстановления.</string>
    <string name="dialogtext4_1">Расскажите народу Вамоль, сколько планет могут почувствоать их творчество, для этого
    выберете ту планету, которая находится дальше от Солнца.</string>
    <string name="dialogtext4_2">Странники готовы возвратиться по утру, чтобы снова взяться за дело, а перед этим
    они рассказывают Вам легенду о затеренном морсоком государстве, которое образовалось после забытия.</string>
    <string name="dialogtext5_1">Откройте своё сердце старцу, для этого покажите ему ту эпоху, которая появилась позже.</string>
    <string name="dialogtext5_2">Каранды вернутся вместе с Вами и будут оберегать Эвергардэн от любых невзгод.</string>
    <string name="dialogtext6_1">Покажите гигантам краски мира, указав на тот цвет, который будет более теплым.</string>
    <string name="dialogtext6_2">Обратив внимание на самых больших жителей, стоит обратиться и к маленьким.
    Тукары, народ леса и маленких тайн. Без их помощи Вам не обойтись.</string>
    <string name="dialogtext7_1">Покажите Тукарам свои знания о лесных растениях, для этого из предложенных вариантов выберете то растение,
        которое съедобно.</string>
    <string name="dialogtext7_2">Это было сложное задание, но вы справились, Тукары довольны проделаной работой и согласны помочь Вам.
    Осталось обговорить с ними объем нужной работы.</string>
    <string name="dialogtext8_1">Перед восстановлением стоит правильно распределить силы, для этого выберете тот объем, который
    будет больше.</string>
    <string name="dialogtext8_2">Поздравляем Вас, минимальная работа готова! Теперь это Ваше королевство.
    Будьте осторожны и надеемся, что скоро Вас увидим.</string>


    <string name="plotAll">
        Королевство Эвергардэн существовало ещё до разрыва континента. -
Все его обитатели, от болотных Наг, до северных Д+ухов, существовали в мире, под руководством короля Гилберта. --
Каждую весну над замком воссоединялись Солнце и Луна, пряча Эвергардэн от всех невзгод находящихся за его стенами. -
Так, - было прежде … --

Поздней осенью в семью короля пришла болезнь. --
Его жена, дочери, и сыновья, не могли жить прежней жизнью, -- их сердц+а сковало пламя. --
Будучи прежде, сильнейшими, теперь они увядали на глазах. --
Пустели город+а, деревни и лес+а. --

От невыносимой тоски, король принял решение, пожертвовать священной книгой Дней, - и разорвав её на несколько частей, пустил страницы по всем сторон+ам света, - после чего, навсегда остался взаперти, рядом со своей семьей. --
Рукописи этой книги, таили в себе небывалое могущество, которое теперь утрачено навеки. --
От замка, и его жителей, не осталось и след+а, нет больше, ни жизни, ни звонких голосов, ни надежды. --

Только отважному герою, под силу собрать всё мастерство этой книги, и вернуть королевство Эвергардэн, к былому величию. Возможно, в покоях короля, всё ещё остались ст+оящие зацепки. —

На приоконной тумбе, лежала книга, сохранившая невиданный красоты переплёт, золотые нити, обрамляющие форзац, вставки драгоценных камней, и каллиграфические буквы, выдержанные в бордовом цвете, — заветная книга Дней.  --
Внутри переплёта - варварски вырванные страницы, размытые следы от капель, и полосы земли. Ничего более внутри неё не было, хотя … -
Оглавление. -- В книге, всего семь глав, и каждая, описывала силу определенного народа. Может стоит соединить их.

Кут+умы существовали ещё до прих+ода людей, земля их считалась священной, – жили они в гармонии с природой, не контактируя с другими существами. Они отличались особой преданностью и холодным разумом, что позволило им овладеть магией.

После горестных событий они отправились под землю, дабы скрыться от чужих глаз и проживать свой век вдали и тиши. –

С тех времен никто больше не видел ни одного Кутума, можно только догадываться о том, как далеко в недра земли они могли спуститься. Вернуть их на поверхность будет непосильной задачей.

Б+ерны - самые ловкие, быстрые и мечтательные, их крылья не терпят скованности и строгости, они смогли найти себе убежище лишь только высоко в небе. - на летающих островах. - подобно птицам. таким же свободным и недосягаемым. – чтобы добраться  до них, - потребуется несколько недель в полёте. но они обязательно вознаградят Вас своей преданностью. - и с удовольствием окажут помощь при восстановлении Эвергардэна. --
Пусть они и свободны, но хлопот у Б+ернов не меньше, чем у людей. они хранят равновесие времен года и укрощают погодные тучи. ради спокойствия людей.
-- за время такой продолжительной жизни в небе, они позабыли, - каког+о там, - на земле.

Вам+оль — один из самых нежных народов Эвергардэна. Они не представляют себя без искусства и возможности творить. Их музыка льётся изящными нитями, – а мазки красок искрят волшебством. Всегда народ Вам+оль считался скитальческим, но только в Эвергардэне по-настоящему бились их сердца.

Такая великая слава быстро помогла сыскать их лагерь и у костра они поведали, что со времен тьмы и тумана. Так и не смогли они стать счастливыми. И талант их ушёл. И одиноки они на планете, как никто. Пропала искра их души и не могут они ничем больше помочь путнику.  Расскажите им сколько ещё существуют планет и как Вам+оль может им помочь.

Где-то в океане Т+итума обитают Кар+анды, потомки болотных Наг, которые охраняли водные границы королевства. Никто до сих пор не знает. Что скрывается на дне океана. Отважные моряки рассказывают, что скрывается в пучине ужасающее чудовище. Закрывающее туманом непрошеных гостей.
Спуститься туда можно только с помощью специальных водорослей. Которые защитят Вас от воды и морских обитателей. – Кар+анды воспринимают Вас как чужака, только один старец, отличающийся от них внешне, спросил вас про Эвергарден. Старец – видит в вас смелость и чистоту души. Свойственную только истинным королям. Старец просит показать вас силу эпох, в которых вы жили прежде.

Дальше путь ведёт Вас в горы. --
Там тысячелетиями пок+оялись гиганты. Стоит и их вернуть к прежней жизни. -- Пусть содрагнётся земля и все узнают, что пробудилось королевство, могущественнее, чем было прежде.  --
Чтобы пробудить их. Нужно отправится к великой матери, которая хранит их сноведения в своих закромах. – Так бережно и долго она о них заботилась, Что и о себе позабыла. -- Несколько сотен лет., не выбиралась из глубин+ы их разума. не видя солнечного света. -- Никакие слова не смогли помочь . убедить её. только с грустью брошеный взгляд. выдавал материнскую тревогу. гиганты со временем превратились в грубый рельеф и сыпучие камни. Эти мысли и толкнули тоску в сердце женщины,. отпустив тревогу, восполнила она сны их красками. - пробудив силы.

Тук+ары самый добрый и миролюбивый народ. Они способны смотреть на всё под другим углом, за что и ценятся при разборе разногласий. Чтобы поговорить с ними. Придется и Вам стать такими же крохотными. Иначе найти их будет просто невозможно. – После некоторых заклинаний. Долгих разговоров. И плотного ужина Тук+ары проверят Вас на знания растений. Лучше не ошибайтесь. Ведь они могут и не одобрить Вашу неаккуратность.

Стоит разобраться с предстоящей работой, постройкой, обустройством и запечатлением момента восстановления. Все вернулись, чтобы помочь Вам. Даже привели с собой своих друзей и знакомых. Работа пойдёт в гору и результат получится отличный. Пусть духи оберегают Эвергардэн и жители его будут счастливы.
    </string>
</resources>